--- a/Makefile.apps
+++ b/Makefile.apps
@@ -10,37 +10,37 @@ include src/solvers/fc2d_dummy/Makefile.am
 # Applications
 # ----------------------------------
 
-# # Simple examples to test options handling, etc, but no solvers.
+# Simple examples to test options handling, etc, but no solvers.
 include applications/dummy/Makefile.am
 include applications/no_solver/Makefile.am
-include applications/test_parms/Makefile.am
+###   include applications/test_parms/Makefile.am
 
 # Test metric terms (curvature, for example)
-include applications/metric/2d/all_mappings/Makefile.am
+###   include applications/metric/2d/all_mappings/Makefile.am
 
 # Scalar advection on manifolds
-include applications/advection/2d/swirl_mapped/Makefile.am
+###   include applications/advection/2d/swirl_mapped/Makefile.am
 include applications/advection/2d/swirl/Makefile.am
 include applications/advection/2d/torus/Makefile.am
-include applications/advection/2d/hemisphere/Makefile.am
-include applications/advection/2d/filament/Makefile.am
-include applications/advection/2d/sphere/Makefile.am
-
-# NCAR Transport problems on the sphere
-include applications/NCAR_transport/slotted_disk/Makefile.am
-include applications/NCAR_transport/correlatedcb/Makefile.am
-
-# Euler example (with mappings)
-include applications/euler/2d/quadrants/Makefile.am
-
-# Mountain problem - SSE
-include applications/Mountain/Makefile.am
-
-# AMRClaw examples from clawpack4.x
-include applications/amrclaw/acoustics/2d/interface/Makefile.am
-include applications/amrclaw/acoustics/2d/radial/Makefile.am
-include applications/amrclaw/burgers/2d/pwconst/Makefile.am
-include applications/amrclaw/advection/2d/swirl/Makefile.am
-include applications/amrclaw/euler/2d/quadrants/Makefile.am
-include applications/amrclaw/euler/2d/shockbubble/Makefile.am
-include applications/amrclaw/shallow/2d/radialdam/Makefile.am
+###   include applications/advection/2d/hemisphere/Makefile.am
+###   include applications/advection/2d/filament/Makefile.am
+###   include applications/advection/2d/sphere/Makefile.am
+###   
+###   # NCAR Transport problems on the sphere
+###   include applications/NCAR_transport/slotted_disk/Makefile.am
+###   include applications/NCAR_transport/correlatedcb/Makefile.am
+###   
+###   # Euler example (with mappings)
+###   include applications/euler/2d/quadrants/Makefile.am
+###   
+###   # Mountain problem - SSE
+###   include applications/Mountain/Makefile.am
+###   
+###   # AMRClaw examples from clawpack4.x
+###   include applications/amrclaw/acoustics/2d/interface/Makefile.am
+###   include applications/amrclaw/acoustics/2d/radial/Makefile.am
+###   include applications/amrclaw/burgers/2d/pwconst/Makefile.am
+###   include applications/amrclaw/advection/2d/swirl/Makefile.am
+###   include applications/amrclaw/euler/2d/quadrants/Makefile.am
+###   include applications/amrclaw/euler/2d/shockbubble/Makefile.am
+###   include applications/amrclaw/shallow/2d/radialdam/Makefile.am
