--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -8,6 +8,7 @@ libforestclaw_installed_headers = \
 	src/fclaw_base.h \
 	src/fclaw2d_base.h \
 	src/fclaw2d_domain.h \
+	src/fclaw2d_defs.h \
 	src/fclaw2d_block.h \
 	src/fclaw2d_vtable.h \
 	src/fclaw2d_output.h \
@@ -22,7 +23,7 @@ libforestclaw_installed_headers = \
 	src/fclaw2d_map.h \
 	src/forestclaw2d.h \
 	src/fclaw2d_convenience.h \
-	src/fclaw2d_clawpatch.H \
+	src/fclaw2d_clawpatch.hpp \
 	src/fclaw2d_patch.H \
 	src/clawpack_fort.H \
 	src/fclaw2d_transform.h \
