--- a/applications/amrclaw/euler/2d/shockbubble/fclaw_options.ini
+++ b/applications/amrclaw/euler/2d/shockbubble/fclaw_options.ini
@@ -19,6 +19,8 @@
      regrid_interval = 1        # Regrid every 'regrid_interval' time steps.
      refine_threshold = 0.5
      coarsen_threshold = 0.1
+     smooth-refine = T
+     coarsen-delay = 0
 
 # Time stepping
      tfinal = 1.5          # Since we are not scaling the results
