--- a/applications/amrclaw/euler/2d/quadrants/fclaw_options.ini
+++ b/applications/amrclaw/euler/2d/quadrants/fclaw_options.ini
@@ -10,10 +10,12 @@
 
 # Regridding information
      minlevel = 1               # Minimum level
-     maxlevel = 4               # Maximum levels of refinement
+     maxlevel = 6               # Maximum levels of refinement
      regrid_interval = 1        # Regrid every 'regrid_interval' time steps.
      refine_threshold = 0.5
      coarsen_threshold = 0.1
+     smooth-refine=T
+     coarsen-delay = 1
 
 # Time stepping
      tfinal = 0.8
