Make some progress on torthem

--- a/applications/advection/2d/torus/Makefile.am
+++ b/applications/advection/2d/torus/Makefile.am
@@ -4,8 +4,9 @@ bin_PROGRAMS += applications/advection/2d/torus/torus \
 		applications/advection/2d/torus/torthem
 
 applications_advection_2d_torus_torus_SOURCES = \
-	applications/advection/2d/torus/torus_user.cpp \
 	applications/advection/2d/torus/torus.cpp \
+	applications/advection/2d/torus/torus_common.c \
+	applications/advection/2d/torus/torus_user.cpp \
 	applications/advection/2d/torus/fclaw2d_map_nomap.c \
 	applications/advection/2d/torus/fclaw2d_map_cart.c \
 	applications/advection/2d/torus/fclaw2d_map_annulus.c \
@@ -26,4 +27,5 @@ applications_advection_2d_torus_torus_LDADD = \
         $(FCLAW_CLAWPACK46_LDADD) $(LDADD)
 
 applications_advection_2d_torus_torthem_SOURCES = \
-	applications/advection/2d/torus/torthem.c
+	applications/advection/2d/torus/torthem.c \
+	applications/advection/2d/torus/torus_common.c
