--- a/src/solvers/fc2d_clawpack4.6/Makefile.am
+++ b/src/solvers/fc2d_clawpack4.6/Makefile.am
@@ -1,7 +1,7 @@
 # -*- Makefile -*-
 libclawpack4_6_generated_headers =
 libclawpack4_6_installed_headers = \
-	src/solvers/fc2d_clawpack4.6/fc2d_clawpack46.H
+	src/solvers/fc2d_clawpack4.6/fc2d_clawpack46.h
 
 libclawpack4_6_compiled_sources = \
 	src/solvers/fc2d_clawpack4.6/fc2d_clawpack46.cpp \
