Update options file with new refinement parameters

--- a/applications/advection/2d/filament/fclaw_options.ini
+++ b/applications/advection/2d/filament/fclaw_options.ini
@@ -12,8 +12,10 @@
      minlevel = 0         # Minimum level
      maxlevel = 4         # Maximum levels of refinement
      regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
-     refine_threshold = 0.25
-     coarsen_threshold = 0.05
+     smooth-refine = T
+     coarsen-delay = 1
+     refine_threshold = 0.5
+     coarsen_threshold = 0.25
 
 # Time stepping
      tfinal = 8.0         #
@@ -41,7 +43,7 @@
      mpi_debug = F
 
 # File and console IO
-     verbosity = essential        # verbose
+     verbosity = info        # verbose
      serialout = T
 
 # mapping functions
