--- a/applications/advection/2d/filament/fclaw_options.ini
+++ b/applications/advection/2d/filament/fclaw_options.ini
@@ -10,12 +10,12 @@
 
 # Regridding options
      minlevel = 0         # Minimum level
-     maxlevel = 4         # Maximum levels of refinement
+     maxlevel = 6         # Maximum levels of refinement
      regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
      smooth-refine = T
      coarsen-delay = 1
-     refine_threshold = 0.5
-     coarsen_threshold = 0.25
+     refine_threshold = 0.25
+     coarsen_threshold = 0.05
 
 # Time stepping
      tfinal = 8.0         #
@@ -43,7 +43,7 @@
      mpi_debug = F
 
 # File and console IO
-     verbosity = info        # verbose
+     verbosity = essential        # verbose
      serialout = T
 
 # mapping functions
