--- a/applications/advection/2d/filament/fclaw_options.ini
+++ b/applications/advection/2d/filament/fclaw_options.ini
@@ -12,8 +12,8 @@
      minlevel = 0         # Minimum level
      maxlevel = 6         # Maximum levels of refinement
      regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
-     smooth-refine = T
-     coarsen-delay = 1
+     smooth-refine = F
+     coarsen-delay = 0
      refine_threshold = 0.25
      coarsen_threshold = 0.05
 
@@ -24,12 +24,14 @@
      initial_dt = 5e-04   # Initial time step for 'minlevel'
      max_cfl = 1.0        # maximum cfl
      desired_cfl = 0.9    # desired cfl
+     smooth-refine=F
+     coarsen-delay=0
 
-     outstyle = 1         # OutputStyle = 1,2,3 (see below, e.g. [OutputStyle_1]
+     outstyle = 3         # Controls how often output files are produced
      nout = 32
      nstep = 1            # Only used if outstyle is 3
 
-     subcycle = T         # subcycle in time ( = T or F).
+     subcycle = F         # subcycle in time ( = T or F).
 
 # Equation info
      meqn = 1             # meqn
@@ -43,7 +45,7 @@
      mpi_debug = F
 
 # File and console IO
-     verbosity = essential        # verbose
+     verbosity = production        # verbose
      serialout = T
 
 # mapping functions
