--- a/applications/advection/2d/filament/fclaw_options.ini
+++ b/applications/advection/2d/filament/fclaw_options.ini
@@ -9,26 +9,24 @@
 
 
 # Regridding options
-     minlevel = 3         # Minimum level
+     minlevel = 2         # Minimum level
      maxlevel = 6         # Maximum levels of refinement
      regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
-     smooth-refine = F
-     coarsen-delay = 0
+     smooth-refine = T
+     coarsen-delay = 1
      refine_threshold = 0.25
      coarsen_threshold = 0.05
 
 # Time stepping
-     tfinal = 8.0         #
+     tfinal = 1.0         #
 
      use_fixed_dt = F     # Take a fixed time step
      initial_dt = 5e-04   # Initial time step for 'minlevel'
      max_cfl = 1.0        # maximum cfl
      desired_cfl = 0.9    # desired cfl
-     smooth-refine=F
-     coarsen-delay=0
 
-     outstyle = 3         # Controls how often output files are produced
-     nout = 32
+     outstyle = 1         # Controls how often output files are produced
+     nout = 4
      nstep = 1            # Only used if outstyle is 3
 
      subcycle = F         # subcycle in time ( = T or F).
@@ -45,7 +43,7 @@
      mpi_debug = F
 
 # File and console IO
-     verbosity = production        # verbose
+     verbosity = essential        # verbose
      serialout = T
 
 # mapping functions
