--- a/applications/advection/2d/filament/fclaw_options.ini
+++ b/applications/advection/2d/filament/fclaw_options.ini
@@ -10,7 +10,7 @@
 
 # Regridding options
      minlevel = 2         # Minimum level
-     maxlevel = 5         # Maximum levels of refinement
+     maxlevel = 4         # Maximum levels of refinement
      regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
      smooth-refine = T
      coarsen-delay = 1
@@ -29,7 +29,7 @@
      nout = 32
      nstep = 1            # Only used if outstyle is 3
 
-     subcycle = F         # subcycle in time ( = T or F).
+     subcycle = T         # subcycle in time ( = T or F).
 
 # Equation info
      meqn = 1             # meqn
