--- a/applications/advection/2d/sphere/fclaw_options.ini
+++ b/applications/advection/2d/sphere/fclaw_options.ini
@@ -5,14 +5,23 @@
      mx = 8               # mx_leaf
      my = 8               # my_leaf
 
-     serialout = T        # Set this to F for parallel runs.  T is dead slow.
+     mbc = 2              # mbc
+     mthbc = 1 1 1 1      # mthbc(1) (left edge), etc.
 
+# Output
+     serialout = T        # Set this to F for parallel runs.  T is dead slow.
+     vtkout = F
+
+# Regridding
      minlevel = 0         # Minimum level
-     maxlevel = 4        # Maximum levels of refinement
+     maxlevel = 5        # Maximum levels of refinement
      regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
      refine_threshold = 0.25
      coarsen_threshold = 0.1
+     smooth-refine = T
+     coarsen-delay=1
 
+# Time stepping
      outstyle = 1         # OutputStyle = 1,2,3 (see below, e.g. [OutputStyle_1]
      nout = 20            # Used for all three out styles;  has different meaning, though.
      tfinal = 5.0         #
@@ -23,20 +32,19 @@
      max_cfl = 1.0        # maximum cfl
      desired_cfl = 0.9    # desired cfl
 
-     verbosity = production        # verbose
-     trapfpe = T          # Trap floating point exceptions
-     mpi_debug = F
+     subcycle = F         # subcycle in time ( = T or F).
 
+# Diagnostics and debugging
+     verbosity = essential        # verbose
+     trapfpe = F          # Trap floating point exceptions
+     mpi_debug = F
+     check_conservation = F
+
+# Equations
      meqn = 1             # meqn
 
-     mbc = 2              # mbc
-     mthbc = 1 1 1 1      # mthbc(1) (left edge), etc.
-
+# Mapping
      manifold = T         # Manifold
-
-     subcycle = T         # subcycle in time ( = T or F).
-
-     check_conservation = F
 
      theta = 0           # Rotation angles (degrees)
      phi = -25            # Rotation angle
