--- a/applications/advection/2d/filament/fclaw_options.ini
+++ b/applications/advection/2d/filament/fclaw_options.ini
@@ -25,8 +25,8 @@
      max_cfl = 1.0        # maximum cfl
      desired_cfl = 0.9    # desired cfl
 
-     outstyle = 1         # Controls how often output files are produced
-     nout = 32
+     outstyle = 3         # Controls how often output files are produced
+     nout = 20
      nstep = 1            # Only used if outstyle is 3
 
      subcycle = T         # subcycle in time ( = T or F).
@@ -39,11 +39,11 @@
 # Diagnostics and debugging
      check_conservation = T
      run_diagnostics = F
-     trapfpe = T          # trap floating point exceptions
+     trapfpe = F          # trap floating point exceptions
      mpi_debug = F
 
 # File and console IO
-     verbosity = essential        # verbose
+     verbosity = production        # verbose
      serialout = T
 
 # mapping functions
