(cubedsphere) Parallel is working

--- a/applications/advection/2d/sphere/fclaw_options.ini
+++ b/applications/advection/2d/sphere/fclaw_options.ini
@@ -13,17 +13,17 @@
      vtkout = F
 
 # Regridding
-     minlevel = 2         # Minimum level
-     maxlevel = 3        # Maximum levels of refinement
+     minlevel = 0         # Minimum level
+     maxlevel = 5        # Maximum levels of refinement
      regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
-     refine_threshold = 0.45
-     coarsen_threshold = 0.2
+     refine_threshold = 0.25
+     coarsen_threshold = 0.1
      smooth-refine = T
      coarsen-delay=0
 
 # Time stepping
-     outstyle = 3         # OutputStyle = 1,2,3 (see below, e.g. [OutputStyle_1]
-     nout = 10            # Used for all three out styles;  has different meaning, though.
+     outstyle = 1         # OutputStyle = 1,2,3 (see below, e.g. [OutputStyle_1]
+     nout = 20            # Used for all three out styles;  has different meaning, though.
      tfinal = 5.0         #
      nstep = 1            # Only used if outstyle is 3
 
@@ -32,7 +32,7 @@
      max_cfl = 1.0        # maximum cfl
      desired_cfl = 0.9    # desired cfl
 
-     subcycle = F         # subcycle in time ( = T or F).
+     subcycle = T         # subcycle in time ( = T or F).
 
 # Diagnostics and debugging
      verbosity = essential        # verbose
