(filament) Default options

--- a/applications/advection/2d/filament/example3_squareddisk.ini
+++ b/applications/advection/2d/filament/example3_squareddisk.ini
@@ -1,5 +1,5 @@
 [user]
-	example = 3       # Pillow disk
+     example = 3       # Squared disk
 
 [Options]
      minlevel = 2         # Minimum level
