--- a/applications/advection/2d/filament/fclaw_options.ini
+++ b/applications/advection/2d/filament/fclaw_options.ini
@@ -8,9 +8,9 @@
      mbc = 2            # number of ghost cells
 
 
-# Regridding options
-     minlevel = 2         # Minimum level
-     maxlevel = 4         # Maximum levels of refinement
+# Regridding optionsx
+     minlevel = 1         # Minimum level
+     maxlevel = 5         # Maximum levels of refinement
      regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
      smooth-refine = T
      coarsen-delay = 1
@@ -39,7 +39,7 @@
 # Diagnostics and debugging
      check_conservation = T
      run_diagnostics = F
-     trapfpe = F          # trap floating point exceptions
+     trapfpe = T          # trap floating point exceptions
      mpi_debug = F
 
 # File and console IO
