Fixing squared disk issue

--- a/applications/advection/2d/filament/example3_squareddisk.ini
+++ b/applications/advection/2d/filament/example3_squareddisk.ini
@@ -2,7 +2,7 @@
      example = 3       # Squared disk
 
 [Options]
-     minlevel = 2         # Minimum level
+     minlevel = 2         # Minimum level (> 2 for squareddisk)
      maxlevel = 4         # Maximum levels of refinement
 
 # Mapping related functions
