(ini files) Update filament files to defaults

--- a/applications/advection/2d/filament/example3_squareddisk.ini
+++ b/applications/advection/2d/filament/example3_squareddisk.ini
@@ -1,5 +1,6 @@
 [user]
      example = 3       # Squared disk
+     alpha = 0.5
 
 [Options]
      minlevel = 2         # Minimum level (> 2 for squareddisk)
