--- a/applications/advection/2d/filament/fclaw_options.ini
+++ b/applications/advection/2d/filament/fclaw_options.ini
@@ -25,11 +25,11 @@
      max_cfl = 1.0        # maximum cfl
      desired_cfl = 0.9    # desired cfl
 
-     outstyle = 3         # Controls how often output files are produced
+     outstyle = 1         # Controls how often output files are produced
      nout = 32
      nstep = 1            # Only used if outstyle is 3
 
-     subcycle = F         # subcycle in time ( = T or F).
+     subcycle = T         # subcycle in time ( = T or F).
 
 # Equation info
      meqn = 1             # meqn
@@ -43,7 +43,7 @@
      mpi_debug = F
 
 # File and console IO
-     verbosity = production        # verbose
+     verbosity = essential        # verbose
      serialout = T
 
 # mapping functions
