--- a/applications/advection/2d/filament/fclaw_options.ini
+++ b/applications/advection/2d/filament/fclaw_options.ini
@@ -9,7 +9,7 @@
 
 
 # Regridding optionsx
-     minlevel = 1         # Minimum level
+     minlevel = 2         # Minimum level
      maxlevel = 5         # Maximum levels of refinement
      regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
      smooth-refine = T
@@ -29,7 +29,7 @@
      nout = 32
      nstep = 1            # Only used if outstyle is 3
 
-     subcycle = T         # subcycle in time ( = T or F).
+     subcycle = T       # subcycle in time ( = T or F).
 
 # Equation info
      meqn = 1             # meqn
@@ -43,8 +43,9 @@
      mpi_debug = F
 
 # File and console IO
-     verbosity = essential        # verbose
-     serialout = T
+     verbosity = essential    # verbosity
+     serialout = T            # Works with Matlab
+     vtkout = F               # Read into VisIt
 
 # mapping functions
      manifold = F         # Manifold
