(filament,ini files)  Minor updates

--- a/applications/advection/2d/filament/fclaw_options.ini
+++ b/applications/advection/2d/filament/fclaw_options.ini
@@ -45,7 +45,7 @@
 # File and console IO
      verbosity = essential    # verbosity
      serialout = T            # Works with Matlab
-     vtkout = F               # Read into VisIt
+     vtkout = 0               # Read into VisIt
 
 # mapping functions
      manifold = F         # Manifold
