--- a/applications/advection/2d/sphere/fclaw_options.ini
+++ b/applications/advection/2d/sphere/fclaw_options.ini
@@ -1,5 +1,5 @@
 [user]
-     example = 1          # 1 = pillowsphere;  2 = cubed_sphere
+     example = 2          # 1 = pillowsphere;  2 = cubed_sphere
 
 [Options]
      mx = 8               # mx_leaf
@@ -13,8 +13,8 @@
      vtkout = F
 
 # Regridding
-     minlevel = 3         # Minimum level
-     maxlevel = 4        # Maximum levels of refinement
+     minlevel = 2         # Minimum level
+     maxlevel = 5        # Maximum levels of refinement
      regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
      refine_threshold = 0.25
      coarsen_threshold = 0.1
@@ -36,7 +36,7 @@
 
 # Diagnostics and debugging
      verbosity = essential        # verbose
-     trapfpe = F          # Trap floating point exceptions
+     trapfpe = T          # Trap floating point exceptions
      mpi_debug = F
      check_conservation = F
 
