--- a/applications/advection/2d/filament/fclaw_options.ini
+++ b/applications/advection/2d/filament/fclaw_options.ini
@@ -3,14 +3,14 @@
 
 [Options]
 # Grid dimensions
-     mx = 8
-     my = 8		# grid dimensions
+     mx = 16
+     my = 16		# grid dimensions
      mbc = 2            # number of ghost cells
 
 
 # Regridding optionsx
-     minlevel = 2         # Minimum level
-     maxlevel = 5         # Maximum levels of refinement
+     minlevel = 3         # Minimum level
+     maxlevel = 4         # Maximum levels of refinement
      regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
      smooth-refine = T
      coarsen-delay = 1
@@ -18,18 +18,18 @@
      coarsen_threshold = 0.05
 
 # Time stepping
-     tfinal = 8.0         #
+     tfinal = 1.0         #
 
-     use_fixed_dt = F     # Take a fixed time step
-     initial_dt = 5e-04   # Initial time step for 'minlevel'
+     use_fixed_dt = T     # Take a fixed time step
+     initial_dt = 0.0025   # Initial time step for 'minlevel'
      max_cfl = 1.0        # maximum cfl
      desired_cfl = 0.9    # desired cfl
 
-     outstyle = 1         # Controls how often output files are produced
-     nout = 32
+     outstyle = 3         # Controls how often output files are produced
+     nout = 1
      nstep = 1            # Only used if outstyle is 3
 
-     subcycle = T       # subcycle in time ( = T or F).
+     subcycle = F       # subcycle in time ( = T or F).
 
 # Equation info
      meqn = 1             # meqn
@@ -43,7 +43,7 @@
      mpi_debug = F
 
 # File and console IO
-     verbosity = essential    # verbosity
+     verbosity = production    # verbosity
      serialout = T            # Works with Matlab
      vtkout = 0               # Read into VisIt
 
