--- a/applications/advection/2d/sphere/fclaw_options.ini
+++ b/applications/advection/2d/sphere/fclaw_options.ini
@@ -13,8 +13,8 @@
      vtkout = F
 
 # Regridding
-     minlevel = 2         # Minimum level
-     maxlevel = 5        # Maximum levels of refinement
+     minlevel = 1         # Minimum level
+     maxlevel = 6        # Maximum levels of refinement
      regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
      refine_threshold = 0.25
      coarsen_threshold = 0.1
@@ -22,20 +22,21 @@
      coarsen-delay=0
 
 # Time stepping
+     tfinal = 8.0         #
+
      outstyle = 1         # OutputStyle = 1,2,3 (see below, e.g. [OutputStyle_1]
-     nout = 20            # Used for all three out styles;  has different meaning, though.
-     tfinal = 5.0         #
+     nout = 32            # Used for all three out styles;  has different meaning, though.
      nstep = 1            # Only used if outstyle is 3
 
      use_fixed_dt = F     # Take a fixed time step
-     initial_dt = 0.02    # Initial time step for 'minlevel'
+     initial_dt = 0.015625    # Initial time step for 'minlevel'
      max_cfl = 1.0        # maximum cfl
      desired_cfl = 0.9    # desired cfl
 
      subcycle = T         # subcycle in time ( = T or F).
 
 # Diagnostics and debugging
-     verbosity = essential        # verbose
+     verbosity = production        # verbose
      trapfpe = T          # Trap floating point exceptions
      mpi_debug = F
      check_conservation = F
