(quadrants) Adding smooth refine as an option;  plot parallel procs

--- a/applications/euler/2d/quadrants/fclaw_options.ini
+++ b/applications/euler/2d/quadrants/fclaw_options.ini
@@ -14,6 +14,8 @@
      regrid_interval = 1        # Regrid every 'regrid_interval' time steps.
      refine_threshold = 0.25
      coarsen_threshold = 0.025
+     smooth-refine = T
+     coarsen-delay = 1
 
 # Time stepping
      tfinal = 0.8
