(slotted_disk) Update application

--- a/applications/NCAR_transport/slotted_disk/fclaw_options.ini
+++ b/applications/NCAR_transport/slotted_disk/fclaw_options.ini
@@ -17,6 +17,8 @@
      regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
      refine_threshold = 0.25
      coarsen_threshold = 0.05
+     smooth-refine=T
+     coarsen-delay=0
 
 # Time stepping
      tfinal = 5.0         #
