(correlatedcb) Update app

--- a/applications/NCAR_transport/correlatedcb/fclaw_options.ini
+++ b/applications/NCAR_transport/correlatedcb/fclaw_options.ini
@@ -18,6 +18,8 @@
      regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
      refine_threshold = 0.1
      coarsen_threshold = 0.01
+     smooth-refine=T
+     coarsen-delay=0
 
 # Time stepping
      tfinal = 5.0         #
