--- a/Makefile.apps
+++ b/Makefile.apps
@@ -27,8 +27,8 @@ include applications/advection/2d/filament/Makefile.am
 include applications/advection/2d/sphere/Makefile.am
 
 # NCAR Transport problems on the sphere
-###   include applications/NCAR_transport/slotted_disk/Makefile.am
-###   include applications/NCAR_transport/correlatedcb/Makefile.am
+include applications/NCAR_transport/slotted_disk/Makefile.am
+include applications/NCAR_transport/correlatedcb/Makefile.am
 
 # Euler example (with mappings)
 include applications/euler/2d/quadrants/Makefile.am
