(swirl, swirl_mapped) Update options, graphics

--- a/applications/advection/2d/swirl_mapped/fclaw_options.ini
+++ b/applications/advection/2d/swirl_mapped/fclaw_options.ini
@@ -1,12 +1,12 @@
 [user]
-    example = 0          # No mapping
+    example = 0          # No mapping;
     tperiod = 8
 
 [Options]
 
 # Grids
-     mx = 8
-     my = 8
+     mx = 16
+     my = 16
      mbc = 2              # mbc
 
 # Regridding information
