--- a/applications/NCAR_transport/correlatedcb/fclaw_options.ini
+++ b/applications/NCAR_transport/correlatedcb/fclaw_options.ini
@@ -1,5 +1,5 @@
 [user]
-     example = 2          # 1 = pillowsphere;  2 = cubed_sphere
+     example = 1          # 1 = cubedsphere; 2 = pillowcase
      init_choice = 3
 
 [Options]
