--- a/applications/NCAR_transport/slotted_disk/fclaw_options.ini
+++ b/applications/NCAR_transport/slotted_disk/fclaw_options.ini
@@ -1,11 +1,11 @@
 [user]
-     example = 2          # 1 = pillowsphere;  2 = cubed_sphere
+     example = 1          # 1 = cubedsphere;  2 = pillowsphere
 
 [Options]
 
 # Grid dimensions
-     mx = 8               # mx_leaf
-     my = 8               # my_leaf
+     mx = 16               # mx_leaf
+     my = 16               # my_leaf
      mbc = 2              # mbc
 
 # Equations
@@ -13,7 +13,7 @@
 
 # Refinement
      minlevel = 0         # Minimum level
-     maxlevel = 3         # Maximum levels of refinement
+     maxlevel = 4         # Maximum levels of refinement
      regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
      refine_threshold = 0.25
      coarsen_threshold = 0.05
