--- a/applications/advection/2d/filament/fclaw_options.ini
+++ b/applications/advection/2d/filament/fclaw_options.ini
@@ -10,7 +10,7 @@
 
 # Regridding optionsx
      minlevel = 3         # Minimum level
-     maxlevel = 4         # Maximum levels of refinement
+     maxlevel = 5         # Maximum levels of refinement
      regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
      smooth-refine = T
      coarsen-delay = 1
@@ -18,18 +18,18 @@
      coarsen_threshold = 0.05
 
 # Time stepping
-     tfinal = 1.0         #
+     tfinal = 8.0         #
 
-     use_fixed_dt = T     # Take a fixed time step
+     use_fixed_dt = F     # Take a fixed time step
      initial_dt = 0.0025   # Initial time step for 'minlevel'
      max_cfl = 1.0        # maximum cfl
      desired_cfl = 0.9    # desired cfl
 
-     outstyle = 3         # Controls how often output files are produced
-     nout = 1
+     outstyle = 1         # Controls how often output files are produced
+     nout = 32
      nstep = 1            # Only used if outstyle is 3
 
-     subcycle = F       # subcycle in time ( = T or F).
+     subcycle = T       # subcycle in time ( = T or F).
 
 # Equation info
      meqn = 1             # meqn
