--- a/applications/advection/2d/filament/fclaw_options.ini
+++ b/applications/advection/2d/filament/fclaw_options.ini
@@ -37,7 +37,7 @@
 
 
 # Diagnostics and debugging
-     check_conservation = T
+     check_conservation = F
      run_diagnostics = F
      trapfpe = T          # trap floating point exceptions
      mpi_debug = F
