(sphere) Update example0

--- a/applications/advection/2d/sphere/fclaw_options.ini
+++ b/applications/advection/2d/sphere/fclaw_options.ini
@@ -36,7 +36,7 @@
      subcycle = T         # subcycle in time ( = T or F).
 
 # Diagnostics and debugging
-     verbosity = production        # verbose
+     verbosity = essential        # verbose
      trapfpe = T          # Trap floating point exceptions
      mpi_debug = F
      check_conservation = F
