(hemisphere) Added example0.ini

--- a/applications/advection/2d/hemisphere/fclaw_options.ini
+++ b/applications/advection/2d/hemisphere/fclaw_options.ini
@@ -1,5 +1,5 @@
 [user]
-     example = 2          # 1 = pillowsphere;  2 = five-patch sphere
+     example = 2          # 1 = five-patch sphere;  2 = pillow sphere
      alpha = 0.4
 
 [Options]
@@ -26,7 +26,7 @@
 
 
 # File and console IO
-     verbosity = production        # verbose
+     verbosity = essential        # verbose
      serialout = T        # Set this to F for parallel runs.  T is dead slow.
 
 # Debugging options
