(torus) Added example0.ini

--- a/applications/advection/2d/torus/fclaw_options.ini
+++ b/applications/advection/2d/torus/fclaw_options.ini
@@ -47,7 +47,7 @@
 
 # File and console IO
 
-     verbosity = production        # verbose
+     verbosity = essential        # verbose
      serialout = T
 
 # Mapping options
