--- a/applications/advection/2d/swirl_mapped/fclaw_options.ini
+++ b/applications/advection/2d/swirl_mapped/fclaw_options.ini
@@ -15,6 +15,8 @@
      regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
      refine_threshold = 0.25
      coarsen_threshold = 0.05
+     smooth-refine=T
+     coarsen-delay=1
 
 # Time stepping
      tfinal = 4.0         #
@@ -36,7 +38,7 @@
      mpi_debug = F
 
 # Equations and boundary conditions
-     meqn = 3             # meqn
+     meqn = 1             # meqn
      mthbc = 1 1 1 1      # mthbc(1) (left edge), etc.
 
      check_conservation = F
