(swirl_mapped) More examples

--- a/applications/advection/2d/swirl_mapped/fclaw_options.ini
+++ b/applications/advection/2d/swirl_mapped/fclaw_options.ini
@@ -1,5 +1,5 @@
 [user]
-    example = 0          # No mapping;
+    example = 3          # No mapping;
     tperiod = 8
 
 [Options]
@@ -45,7 +45,7 @@
      serialout = T        # ascii output
 
 # Mapping and topology (id mapping in unit square)
-     manifold = F         # Manifold
+     manifold = T         # Manifold
 
 [clawpack46]
      order  = 2 2         # normal and transverse order
