--- a/applications/advection/2d/swirl_mapped/example0.ini
+++ b/applications/advection/2d/swirl_mapped/example0.ini
@@ -9,13 +9,13 @@
      my = 16
 
 # Regridding information
-     minlevel = 0         # Minimum level
-     maxlevel = 3         # Maximum levels of refinement
+     minlevel = 1         # Minimum level
+     maxlevel = 4         # Maximum levels of refinement
 
 # Diagnostics
      verbosity = production        # verbose
 
 # Brick dimensions
-    manifold = T
-    mi = 4
-    mj = 4
+    manifold = F
+    mi = 1
+    mj = 1
