(SWE sphere) Added example0.ini

--- a/applications/shallow/2d/latlong/fclaw_options.ini
+++ b/applications/shallow/2d/latlong/fclaw_options.ini
@@ -1,5 +1,5 @@
 [user]
-     example = 1          # 0 = latlong;  1 = cubed_sphere
+     example = 1          # 0,1 = cubed_sphere; 2 = latlong grid
      longitude = 125 235
      latitude = -50 50
 
@@ -30,8 +30,9 @@
 
      subcycle = T         # subcycle in time ( = T or F).
 
+# Diagnostics
      verbosity = production        # verbose
-     trapfpe = F          # Trap floating point exceptions
+     trapfpe = T          # Trap floating point exceptions
      mpi_debug = F
 
      meqn = 4             # meqn
