--- a/Makefile.apps
+++ b/Makefile.apps
@@ -40,7 +40,7 @@ include applications/shallow/2d/latlong/Makefile.am
 ###   include applications/Mountain/Makefile.am
 
 ###   # AMRClaw examples from clawpack4.x
-###   include applications/amrclaw/acoustics/2d/interface/Makefile.am
+include applications/amrclaw/acoustics/2d/interface/Makefile.am
 ###   include applications/amrclaw/acoustics/2d/radial/Makefile.am
 ###   include applications/amrclaw/burgers/2d/pwconst/Makefile.am
 ###   include applications/amrclaw/advection/2d/swirl/Makefile.am
