(acoustics/interface) Add smooth/refine to example

--- a/Makefile.apps
+++ b/Makefile.apps
@@ -41,7 +41,7 @@ include applications/shallow/2d/latlong/Makefile.am
 
 ###   # AMRClaw examples from clawpack4.x
 include applications/amrclaw/acoustics/2d/interface/Makefile.am
-###   include applications/amrclaw/acoustics/2d/radial/Makefile.am
+include applications/amrclaw/acoustics/2d/radial/Makefile.am
 ###   include applications/amrclaw/burgers/2d/pwconst/Makefile.am
 ###   include applications/amrclaw/advection/2d/swirl/Makefile.am
 include applications/amrclaw/euler/2d/quadrants/Makefile.am
