--- a/applications/amrclaw/acoustics/2d/interface/fclaw_options.ini
+++ b/applications/amrclaw/acoustics/2d/interface/fclaw_options.ini
@@ -17,6 +17,8 @@
      regrid_interval = 1        # Regrid every 'regrid_interval' time steps.
      refine_threshold = 0.05
      coarsen_threshold = 1e-4
+     smooth-refine=T
+     coarsen-delay=1
 
 # Time stepping
      tfinal = 1.0
