--- a/applications/amrclaw/acoustics/2d/radial/fclaw_options.ini
+++ b/applications/amrclaw/acoustics/2d/radial/fclaw_options.ini
@@ -16,6 +16,8 @@
      regrid_interval = 1        # Regrid every 'regrid_interval' time steps.
      refine_threshold = 0.25
      coarsen_threshold = 0.01
+     smooth-refine=T
+     coarsen-delay=1
 
 # Time stepping
      tfinal = 1.0
