Updates to header files;  remove unused files

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -27,6 +27,7 @@ libforestclaw_installed_headers = \
 	src/fclaw2d_clawpatch.h \
 	src/fclaw2d_clawpatch.hpp \
 	src/fclaw2d_patch.hpp \
+	src/fclaw2d_patch.h \
 	src/fclaw2d_neighbors_fort.h \
 	src/fclaw2d_transform.h \
 	src/fclaw_package.h \
