(swirl_mapped) Debugging

--- a/applications/advection/2d/swirl_mapped/example0.ini
+++ b/applications/advection/2d/swirl_mapped/example0.ini
@@ -1,5 +1,5 @@
 [User]
-    example = 0          # No mapping;
+    example = 0          # Identity mapping
     tperiod = 8
 
 [Options]
@@ -13,9 +13,4 @@
      maxlevel = 4         # Maximum levels of refinement
 
 # Diagnostics
-     verbosity = production        # verbose
-
-# Brick dimensions
-    manifold = F
-    mi = 1
-    mj = 1
+     verbosity = essential        # verbose
