--- a/applications/advection/2d/swirl_mapped/fclaw_options.ini
+++ b/applications/advection/2d/swirl_mapped/fclaw_options.ini
@@ -1,5 +1,5 @@
 [user]
-    example = 3          # No mapping;
+    example = 0          # 0-identity; 1-cart/brick; 2-fivepatch
     tperiod = 8
 
 [Options]
@@ -15,8 +15,8 @@
      regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
      refine_threshold = 0.25
      coarsen_threshold = 0.05
-     smooth-refine=T
-     coarsen-delay=1
+     smooth-refine = T
+     coarsen-delay = 1
 
 # Time stepping
      tfinal = 4.0         #
@@ -36,12 +36,12 @@
 
      trapfpe = T          # Trap floating point exceptions
      mpi_debug = F
+     check_conservation = F
 
 # Equations and boundary conditions
      meqn = 1             # meqn
      mthbc = 1 1 1 1      # mthbc(1) (left edge), etc.
 
-     check_conservation = F
      serialout = T        # ascii output
 
 # Mapping and topology (id mapping in unit square)
