(swirl_mapped) Reorganizing example .ini files

--- a/applications/advection/2d/swirl_mapped/example0.ini
+++ b/applications/advection/2d/swirl_mapped/example0.ini
@@ -14,3 +14,7 @@
 
 # Diagnostics
      verbosity = essential        # verbose
+
+[clawpack46]
+     mcapa = 3            # mcapa
+     maux = 3             # maux
