Fixing initial partitioning

--- a/applications/advection/2d/swirl_mapped/fclaw_options.ini
+++ b/applications/advection/2d/swirl_mapped/fclaw_options.ini
@@ -1,22 +1,22 @@
 [user]
-    example = 0          # 0-identity; 1-cart/brick; 2-fivepatch
-    tperiod = 8
+    example = 2          # 0-identity; 1-cart/brick; 2-fivepatch
+    tperiod = 4
 
 [Options]
 
 # Grids
-     mx = 16
-     my = 16
+     mx = 32
+     my = 32
      mbc = 2              # mbc
 
 # Regridding information
-     minlevel = 1         # Minimum level
-     maxlevel = 4         # Maximum levels of refinement
+     minlevel = 0         # Minimum level
+     maxlevel = 0         # Maximum levels of refinement
      regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
      refine_threshold = 0.25
      coarsen_threshold = 0.05
      smooth-refine = T
-     coarsen-delay = 1
+     coarsen-delay = 0
 
 # Time stepping
      tfinal = 4.0         #
@@ -29,7 +29,7 @@
      nout = 16            # Used for all three out styles;  has different meaning, though.
      nstep = 1            # Only used if outstyle is 3
 
-     subcycle = T         # subcycle in time ( = T or F).
+     subcycle = F         # subcycle in time ( = T or F).
 
 # File and console IO
      verbosity = production        # verbose
