Updating example0.ini so it includes everything

--- a/applications/advection/2d/swirl_mapped/example0.ini
+++ b/applications/advection/2d/swirl_mapped/example0.ini
@@ -12,9 +12,55 @@
      minlevel = 1         # Minimum level
      maxlevel = 5         # Maximum levels of refinement
 
-# Diagnostics
+# Regridding information
+     regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
+     refine_threshold = 0.25
+     coarsen_threshold = 0.05
+     smooth-refine = T
+     coarsen-delay = 0
+
+# Time stepping
+     tfinal = 4.0         #
+     use_fixed_dt = F     # Take a fixed time step
+     initial_dt = 0.005   # Initial time step for 'minlevel'
+     max_cfl = 1.0        # maximum cfl
+     desired_cfl = 0.9    # desired cfl
+
+     outstyle = 1         # OutputStyle = 1,2,3 (see below, e.g. [OutputStyle_1]
+     nout = 16            # Used for all three out styles;  has different meaning, though.
+     nstep = 1            # Only used if outstyle is 3
+
+     subcycle = T         # subcycle in time ( = T or F).
+
+# File and console IO
      verbosity = essential        # verbose
 
+     trapfpe = T          # Trap floating point exceptions
+     mpi_debug = F
+     check_conservation = F
+
+# Equations and boundary conditions
+     meqn = 1             # meqn
+     mthbc = 1 1 1 1      # mthbc(1) (left edge), etc.
+
+     serialout = T        # ascii output
+
+# Mapping and topology (id mapping in unit square)
+     manifold = T         # Manifold
+
+     ax = 0
+     bx = 1
+     ay = 0
+     by = 1
+
 [clawpack46]
+     order  = 2 2         # normal and transverse order
+     mcapa = 3            # mcapa
+     maux = 3             # maux
+     src_term = 0         # src_term
+
+     mwaves = 1           # mwaves
+     mthlim = 3           # mthlim (is a vector in general, with 'mwaves' entries)
+
      mcapa = 3            # mcapa
      maux = 3             # maux
