--- a/applications/advection/2d/swirl_mapped/fclaw_options.ini
+++ b/applications/advection/2d/swirl_mapped/fclaw_options.ini
@@ -1,17 +1,17 @@
 [user]
-    example = 2          # 0-identity; 1-cart/brick; 2-fivepatch
+    example = 0          # 0-identity; 1-cart/brick; 2-fivepatch
     tperiod = 4
 
 [Options]
 
 # Grids
-     mx = 32
-     my = 32
+     mx = 8
+     my = 8
      mbc = 2              # mbc
 
 # Regridding information
-     minlevel = 0         # Minimum level
-     maxlevel = 0         # Maximum levels of refinement
+     minlevel = 3         # Minimum level
+     maxlevel = 6         # Maximum levels of refinement
      regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
      refine_threshold = 0.25
      coarsen_threshold = 0.05
@@ -29,7 +29,7 @@
      nout = 16            # Used for all three out styles;  has different meaning, though.
      nstep = 1            # Only used if outstyle is 3
 
-     subcycle = F         # subcycle in time ( = T or F).
+     subcycle = T         # subcycle in time ( = T or F).
 
 # File and console IO
      verbosity = production        # verbose
