--- a/applications/shallow/2d/latlong/example0.ini
+++ b/applications/shallow/2d/latlong/example0.ini
@@ -31,6 +31,7 @@
 
      trapfpe = T          # Trap floating point exceptions
      mpi_debug = F
+     print-options = T
 
      meqn = 4             # meqn
 
@@ -43,7 +44,8 @@
     #scale = 6.371e6 6371e6 6371e6
     scale = 1 1 1
 
-	 check_conservation = F
+
+    check_conservation = F
 
 [clawpack46]
      order  = 2 2          # normal and transverse order
