--- a/applications/advection/2d/filament/example0.ini
+++ b/applications/advection/2d/filament/example0.ini
@@ -1,23 +1,61 @@
-[user]
-	example = 0
-
 [Options]
      mx = 8
      my = 8
+     mbc = 2            # number of ghost cells
+
+# Regridding optionsx
      minlevel = 2         # Minimum level
      maxlevel = 5         # Maximum levels of refinement
+     regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
+     smooth-refine = T
+     coarsen-delay = 1
+     refine_threshold = 0.25
+     coarsen_threshold = 0.05
 
-# mapping options
-	manifold = 0
+# Time stepping
+     tfinal = 8.0         #
 
-# Domain for single grid, non-mapped grid.
-	ax = 0
-        bx = 2
-	ay = 0
-	by = 2
+     use_fixed_dt = F     # Take a fixed time step
+     initial_dt = 0.0025   # Initial time step for 'minlevel'
+     max_cfl = 1.0        # maximum cfl
+     desired_cfl = 0.9    # desired cfl
 
-# Diagnostics
-    verbosity = essential
+     outstyle = 1         # Controls how often output files are produced
+     nout = 32
+     nstep = 1            # Only used if outstyle is 3
+
+     subcycle = T       # subcycle in time ( = T or F).
+
+# Equation info
+     meqn = 1             # meqn
+     mthbc = 1 1 1 1      # mthbc(1) (left edge), etc.
+
+
+# Diagnostics and debugging
+     check_conservation = F
+     run_diagnostics = F
+     trapfpe = T          # trap floating point exceptions
+     mpi_debug = F
+
+# File and console IO
+     verbosity = essential    # verbosity
+     serialout = T            # Works with Matlab
+     vtkout = 0               # Read into VisIt
+
+# mapping functions
+     manifold = F         # Manifold
+
+     # Domain for single grid, non-mapped grid.
+     ax = 0
+     bx = 2
+     ay = 0
+     by = 2
 
 [clawpack46]
-	mcapa = 0            # mcapa
+     order  = 2 2         # normal and transverse order
+     mcapa = 0            # mcapa
+     maux = 3             # maux  (store mcapa in 1, if we have it)
+     src_term = 0         # src_term
+
+     mwaves = 1           # mwaves
+     mthlim = 3           # mthlim (is a vector in general, with 'mwaves' entries)
