--- a/applications/shallow/2d/latlong/example0.ini
+++ b/applications/shallow/2d/latlong/example0.ini
@@ -1,22 +1,23 @@
 [user]
      example = 0          # 0,1 = cubed_sphere; 2=latlong
 
-     mx = 48               # mx_leaf
-     my = 48              # my_leaf
+[Options]
+     mx = 16               # mx_leaf
+     my = 16               # my_leaf
 
-     minlevel = 1         # Minimum level
-     maxlevel = 4        # Maximum levels of refinement
+     minlevel = 1          # Minimum level
+     maxlevel = 5          # Maximum levels of refinement
 
-     regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
+     regrid_interval = 1   # Regrid every 'regrid_interval' time steps.
      refine_threshold = 5e-3
      coarsen_threshold = 2.5e-3
      smooth-refine = T
      coarsen-delay = 0
 
-     tfinal = 1.0         #
+     tfinal = 8.0         #
 
      outstyle = 1         # OutputStyle = 1,2,3 (see below, e.g. [OutputStyle_1]
-     nout = 4            # Used for all three out styles;  has different meaning, though.
+     nout = 32            # Used for all three out styles;  has different meaning, though.
      nstep = 1            # Only used if outstyle is 3
 
      use_fixed_dt = F     # Take a fixed time step
@@ -27,11 +28,11 @@
      subcycle = F         # subcycle in time ( = T or F).
 
 # Diagnostics
-     verbosity = essential        # verbose
+     verbosity = essential        # verbos
 
      trapfpe = T          # Trap floating point exceptions
      mpi_debug = F
-     print-options = T
+     ghost_patch_pack_area = F
 
      meqn = 4             # meqn
 
