(sphere) Minor changes to ini files

--- a/applications/shallow/2d/sphere/example0.ini
+++ b/applications/shallow/2d/sphere/example0.ini
@@ -25,14 +25,14 @@
      max_cfl = 1.0        # maximum cfl
      desired_cfl = 0.9    # desired cfl
 
-     subcycle = F         # subcycle in time ( = T or F).
+     subcycle = T         # subcycle in time ( = T or F).
 
 # Diagnostics
      verbosity = essential        # verbos
 
      trapfpe = T          # Trap floating point exceptions
      mpi_debug = F
-     ghost_patch_pack_area = F
+     ghost_patch_pack_area = T
 
      meqn = 4             # meqn
 
@@ -51,7 +51,7 @@
 [clawpack46]
      order  = 2 2          # normal and transverse order
      mcapa = 1            # mcapa
-     maux = 19             # maux
+     maux = 16             # maux
      src_term = 0         # src_term
 
      mwaves = 3           # mwaves
