(metric) test new exact integration routines; seem to work

--- a/applications/metric/2d/all_mappings/fclaw_options.ini
+++ b/applications/metric/2d/all_mappings/fclaw_options.ini
@@ -1,18 +1,20 @@
 [user]
-     example = 3
+     example = 7
 
 [Options]
 
-     mx = 32 		  # mx_leaf
-     my = 32              # my_leaf
+     mx = 16 		  # mx_leaf
+     my = 16              # my_leaf
 
      outstyle = 0         # Initialize grid, output frame 0 and exit.
+     refine_threshold = 1e-3
+     smooth-refine = T
 
      serialout = T
      run_diagnostics = T
 
-     minlevel = 0         # Minimum level
-     maxlevel = 0         # Maximum levels of refinement
+     minlevel = 3         # Minimum level
+     maxlevel = 3         # Maximum levels of refinement
 
      verbosity = production        # verbose
      trapfpe = T          # Trap floating point exceptions
