(metric) Add serialout option

--- a/applications/metric/2d/all_mappings/fclaw_options.ini
+++ b/applications/metric/2d/all_mappings/fclaw_options.ini
@@ -18,6 +18,7 @@
 
      verbosity = production        # verbose
      trapfpe = T          # Trap floating point exceptions
+     serialout = F
 
      meqn = 3             # meqn
 
