--- a/applications/advection/2d/filament/example0.ini
+++ b/applications/advection/2d/filament/example0.ini
@@ -4,11 +4,11 @@
      mbc = 2            # number of ghost cells
 
 # Regridding optionsx
-     minlevel = 2         # Minimum level
+     minlevel = 3         # Minimum level
      maxlevel = 5         # Maximum levels of refinement
      regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
-     smooth-refine = T
-     coarsen-delay = 1
+     smooth-refine = F
+     coarsen-delay = 0
      refine_threshold = 0.25
      coarsen_threshold = 0.05
 
@@ -20,11 +20,11 @@
      max_cfl = 1.0        # maximum cfl
      desired_cfl = 0.9    # desired cfl
 
-     outstyle = 1         # Controls how often output files are produced
-     nout = 32
+     outstyle = 3         # Controls how often output files are produced
+     nout = 10
      nstep = 1            # Only used if outstyle is 3
 
-     subcycle = T       # subcycle in time ( = T or F).
+     subcycle = F       # subcycle in time ( = T or F).
 
 # Equation info
      meqn = 1             # meqn
@@ -38,8 +38,8 @@
      mpi_debug = F
 
 # File and console IO
-     verbosity = essential    # verbosity
-     serialout = T            # Works with Matlab
+     verbosity = production    # verbosity
+     serialout = F            # Works with Matlab
      vtkout = 0               # Read into VisIt
 
 # mapping functions
