(filament/matlab) restore default ini file

--- a/applications/advection/2d/filament/example0.ini
+++ b/applications/advection/2d/filament/example0.ini
@@ -20,8 +20,8 @@
      max_cfl = 1.0        # maximum cfl
      desired_cfl = 0.9    # desired cfl
 
-     outstyle = 3         # Controls how often output files are produced
-     nout = 10
+     outstyle = 1         # Controls how often output files are produced
+     nout = 32
      nstep = 1            # Only used if outstyle is 3
 
      subcycle = F       # subcycle in time ( = T or F).
@@ -39,7 +39,7 @@
 
 # File and console IO
      verbosity = production    # verbosity
-     serialout = F            # Works with Matlab
+     serialout = T            # Works with Matlab
      vtkout = 0               # Read into VisIt
 
 # mapping functions
