Fix hemisphere Makefile

--- a/applications/advection/2d/hemisphere/Makefile.am
+++ b/applications/advection/2d/hemisphere/Makefile.am
@@ -6,8 +6,8 @@ applications_advection_2d_hemisphere_hemisphere_SOURCES = \
 	applications/advection/2d/hemisphere/hemisphere_user.cpp \
 	applications/advection/2d/hemisphere/hemisphere.cpp \
 	applications/advection/2d/hemisphere/velocity_wind.f \
-	applications/advection/2d/hemisphere/fclaw2d_map_pillowsphere.f \
-	applications/advection/2d/hemisphere/fclaw2d_map_pillowsphere5.f \
+	applications/advection/2d/hemisphere/fclaw2d_map_pillowsphere.c \
+	applications/advection/2d/hemisphere/fclaw2d_map_pillowsphere5.c \
 	applications/advection/2d/hemisphere/setprob.f \
 	applications/advection/2d/hemisphere/user_4.6/rpn2noncons.f \
 	applications/advection/2d/hemisphere/user_4.6/rpt2noncons.f \
