(adv/sphere) Update ini file

--- a/applications/advection/2d/sphere/example0.ini
+++ b/applications/advection/2d/sphere/example0.ini
@@ -40,6 +40,8 @@
      trapfpe = T          # Trap floating point exceptions
      mpi_debug = F
      check_conservation = F
+     ghost_patch_pack_area = T
+
 
 # Equations
      meqn = 1             # meqn
