--- a/applications/advection/2d/filament/example0.ini
+++ b/applications/advection/2d/filament/example0.ini
@@ -1,3 +1,6 @@
+[user]
+     example = 0
+
 [Options]
      mx = 8
      my = 8
@@ -8,6 +11,7 @@
      maxlevel = 6         # Maximum levels of refinement
      regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
      smooth-refine = T
+     # smooth-level = 6
      coarsen-delay = 1
      refine_threshold = 0.25
      coarsen_threshold = 0.05
