(filament) ini files

--- a/applications/advection/2d/filament/example3_squareddisk.ini
+++ b/applications/advection/2d/filament/example3_squareddisk.ini
@@ -3,8 +3,8 @@
      alpha = 0.5
 
 [Options]
-     mx = 8
-     my = 8
+     mx = 32
+     my = 32
      mbc = 2            # number of ghost cells
 
      regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
@@ -39,6 +39,8 @@
      run_diagnostics = F
      trapfpe = T          # trap floating point exceptions
      mpi_debug = F
+     ghost_patch_pack_area = T
+
 
 # File and console IO
      verbosity = essential    # verbosity
