(filament) Minor changes to .ini files

--- a/applications/advection/2d/filament/example0.ini
+++ b/applications/advection/2d/filament/example0.ini
@@ -2,15 +2,15 @@
      example = 0
 
 [Options]
-     mx = 16
-     my = 16
+     mx = 32
+     my = 32
      mbc = 2            # number of ghost cells
 
 # Regridding optionsx
-     minlevel = 1         # Minimum level
-     maxlevel = 6         # Maximum levels of refinement
+     minlevel = 0         # Minimum level
+     maxlevel = 4         # Maximum levels of refinement
      regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
-     smooth-refine = T
+     smooth-refine = F
      # smooth-level = 6
      coarsen-delay = 1
      refine_threshold = 0.25
@@ -19,16 +19,16 @@
 # Time stepping
      tfinal = 8.0         #
 
-     use_fixed_dt = F     # Take a fixed time step
-     initial_dt = 0.0025   # Initial time step for 'minlevel'
+     use_fixed_dt = T     # Take a fixed time step
+     initial_dt = 0.008   # Initial time step for 'minlevel'
      max_cfl = 1.0        # maximum cfl
      desired_cfl = 0.9    # desired cfl
 
-     outstyle = 1         # Controls how often output files are produced
-     nout = 32
-     nstep = 1            # Only used if outstyle is 3
+     outstyle = 3         # Controls how often output files are produced
+     nout = 2000
+     nstep = 200            # Only used if outstyle is 3
 
-     subcycle = T       # subcycle in time ( = T or F).
+     subcycle = F       # subcycle in time ( = T or F).
 
 # Equation info
      meqn = 1             # meqn
@@ -42,7 +42,7 @@
      mpi_debug = F
 
 # File and console IO
-     verbosity = essential    # verbosity
+     verbosity = production    # verbosity
      serialout = T            # Works with Matlab
      vtkout = 0               # Read into VisIt
 
