--- a/applications/advection/2d/filament/example3_squareddisk.ini
+++ b/applications/advection/2d/filament/example3_squareddisk.ini
@@ -3,8 +3,8 @@
      alpha = 0.5
 
 [Options]
-     mx = 32
-     my = 32
+     mx = 8
+     my = 8
      mbc = 2            # number of ghost cells
 
      regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
@@ -18,14 +18,14 @@
 
      tfinal = 8.0         #
 
-     use_fixed_dt = F     # Take a fixed time step
-     initial_dt = 0.0025   # Initial time step for 'minlevel'
+     use_fixed_dt = T     # Take a fixed time step
+     initial_dt = 3.90625e-3   # Initial time step for 'minlevel'
      max_cfl = 1.0        # maximum cfl
      desired_cfl = 0.9    # desired cfl
 
-     outstyle = 1         # Controls how often output files are produced
-     nout = 32
-     nstep = 1            # Only used if outstyle is 3
+     outstyle = 3         # Controls how often output files are produced
+     nout = 2048
+     nstep = 256            # Only used if outstyle is 3
 
      subcycle = T       # subcycle in time ( = T or F).
 
@@ -43,7 +43,7 @@
 
 
 # File and console IO
-     verbosity = essential    # verbosity
+     verbosity = production    # verbosity
      serialout = T            # Works with Matlab
      vtkout = 0               # Read into VisIt
 
