adding example file used for simlulations

--- a/applications/advection/2d/filament/example_sisc.ini
+++ b/applications/advection/2d/filament/example_sisc.ini
@@ -9,8 +9,8 @@
 
 
 # Regridding options
-     minlevel = 1         # Minimum level
-     maxlevel = 1         # Maximum levels of refinement
+     minlevel = 0         # Minimum level
+     maxlevel = 2         # Maximum levels of refinement
      regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
      smooth-refine = F
      coarsen-delay = 0
@@ -22,15 +22,15 @@
      tfinal = 8.0         #
 
      use_fixed_dt = T     # Take a fixed time step
-     initial_dt = 5e-4   # Initial time step for 'minlevel'
+     initial_dt = 1e-3   # Initial time step for 'minlevel'
      max_cfl = 1.0        # maximum cfl
      desired_cfl = 0.9    # desired cfl
 
      outstyle = 3         # Controls how often output files are produced
-     nout =  16000
-     nstep = 2000            # Only used if outstyle is 3
+     nout =  32000
+     nstep = 4000            # Only used if outstyle is 3
 
-     subcycle = T       # subcycle in time ( = T or F).
+     subcycle = F       # subcycle in time ( = T or F).
 
 # Equation info
      meqn = 1             # meqn
