Add non-mapping that uses (ax,bx,ay,by) and a brick mapping

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -101,6 +101,7 @@ libforestclaw_compiled_sources = \
 	src/mappings/torus/mapc2m_torus.f \
 	src/mappings/latlong/mapc2m_latlong.f \
 	src/mappings/pillowsphere/pillowsphere_corner_ghost.f \
+	src/mappings/fclaw2d_map_nomap_brick.c \
 	src/ClawPatch.cpp \
 	src/fclaw2d_initialize.cpp \
 	src/fclaw2d_run.cpp \
