(shockbubble) Ini files

--- a/applications/amrclaw/euler/2d/shockbubble/fclaw_options.ini
+++ b/applications/amrclaw/euler/2d/shockbubble/fclaw_options.ini
@@ -23,7 +23,7 @@
      coarsen-delay = 0
 
 # Time stepping
-     tfinal = 1.5          # Since we are not scaling the results
+     tfinal = 0.75          # Since we are not scaling the results
      initial_dt = 1.5e-3          # Initial time step for 'minlevel'
 
      use_fixed_dt = F            # Take a fixed time step
@@ -52,18 +52,10 @@
      mthbc = 1 1 3 1      # mthbc(1) (left edge), etc.
 
 # Mapping and topology
-     manifold = T         # Manifold
+     manifold = F         # Manifold
 
      mi = 4
      mj = 1
-
-     # Scale to [-1,1]x[-0.25,0.25]
-     scale = 1 0.25 1
-
-     # shift cart map to [0,2]x[0,0.5]
-     shift = 1 0.25 1
-
-
 
 [clawpack46]
      order  = 2 2         # normal and transverse order
