(shockbubble) Update file with tikz parameters

--- a/applications/amrclaw/euler/2d/shockbubble/example_sisc.ini
+++ b/applications/amrclaw/euler/2d/shockbubble/example_sisc.ini
@@ -41,6 +41,9 @@
 # File and console IO
      verbosity = essential      # verbose
      serialout = T               # ascii output
+     tikzout = T
+     tikz_figsize = 8 2
+     tikz_prefix = fc_sb_
 
 # Debugging and diagnostics
      trapfpe = F
