(shockbubble) new Matlab/ini files

--- a/applications/amrclaw/euler/2d/shockbubble/example_sisc.ini
+++ b/applications/amrclaw/euler/2d/shockbubble/example_sisc.ini
@@ -9,17 +9,17 @@
 
 [Options]
 
-     mx = 8
-     my = 8
+     mx = 128
+     my = 128
      mbc = 2
 
 # Regridding information
-     minlevel = 0               # Minimum level
-     maxlevel = 6               # Maximum levels of refinement
+     minlevel = 2               # Minimum level
+     maxlevel = 2               # Maximum levels of refinement
      regrid_interval = 1        # Regrid every 'regrid_interval' time steps.
      refine_threshold = 0.5
-     coarsen_threshold = 0.2
-     smooth-refine = T
+     coarsen_threshold = 0.1
+     smooth-refine = F
      coarsen-delay = 0
      smooth-level = 0
 
@@ -40,10 +40,9 @@
 
 # File and console IO
      verbosity = essential      # verbose
-     serialout = T               # ascii output
+     serialout = T             # ascii output
      tikzout = T
      tikz_figsize = 8 2
-     tikz_prefix = fc_sb_
 
 # Debugging and diagnostics
      trapfpe = F
