--- a/applications/amrclaw/euler/2d/shockbubble/example_sisc.ini
+++ b/applications/amrclaw/euler/2d/shockbubble/example_sisc.ini
@@ -40,7 +40,10 @@
 
 # File and console IO
      verbosity = essential      # verbose
-     serialout = T               # ascii output
+     vtkout = F
+     serialout = T             # ascii output
+     tikzout = T
+     tikz_figsize = 8 2    # Inches, used to scale tikz picture
 
 # Debugging and diagnostics
      trapfpe = F
