--- a/applications/advection/2d/filament/example_sisc.ini
+++ b/applications/advection/2d/filament/example_sisc.ini
@@ -3,26 +3,26 @@
 
 [Options]
 # Grid dimensions
-     mx = 256
-     my = 256		# grid dimensions
+     mx = 64
+     my = 64		# grid dimensions
      mbc = 2            # number of ghost cells
 
 
 # Regridding options
-     minlevel = 0         # Minimum level
-     maxlevel = 2         # Maximum levels of refinement
+     minlevel = 4         # Minimum level
+     maxlevel = 4         # Maximum levels of refinement
      regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
      smooth-refine = F
-     coarsen-delay = 0
-     refine_threshold = 0.05
-     coarsen_threshold = 0.001
-     smooth-level = -1
+     coarsen-delay = 1
+     refine_threshold = 0.1
+     coarsen_threshold = 1e-3
+     smooth-level = 5
 
 # Time stepping
      tfinal = 8.0         #
 
      use_fixed_dt = T     # Take a fixed time step
-     initial_dt = 1e-3   # Initial time step for 'minlevel'
+     initial_dt = 2.5e-4   # Initial time step for 'minlevel'
      max_cfl = 1.0        # maximum cfl
      desired_cfl = 0.9    # desired cfl
 
@@ -30,7 +30,7 @@
      nout =  32000
      nstep = 4000            # Only used if outstyle is 3
 
-     subcycle = F       # subcycle in time ( = T or F).
+     subcycle = T       # subcycle in time ( = T or F).
 
 # Equation info
      meqn = 1             # meqn
@@ -44,12 +44,17 @@
      mpi_debug = F
 
 # File and console IO
-     verbosity = production    # verbosity
+     verbosity = essential    # verbosity
      serialout = T            # Works with Matlab
+     tikzout = T
+     tikz_figsize = 4 4
      vtkout = 0               # Read into VisIt
 
 # mapping functions
      manifold = F         # Manifold
+
+     mi = 4
+     mj = 4
 
      # Domain for single grid, non-mapped grid.
      ax = 0
@@ -64,4 +69,4 @@
      src_term = 0         # src_term
 
      mwaves = 1           # mwaves
-     mthlim = 3           # mthlim (is a vector in general, with 'mwaves' entries)
+     mthlim = 4           # mthlim (is a vector in general, with 'mwaves' entries)
