--- a/applications/advection/2d/swirl_mapped/Makefile.am
+++ b/applications/advection/2d/swirl_mapped/Makefile.am
@@ -5,6 +5,8 @@
 
 bin_PROGRAMS += applications/advection/2d/swirl_mapped/swirl
 
+include_HEADERS += applications/advection/2d/swirl_mapped/swirl_user.h
+
 applications_advection_2d_swirl_mapped_swirl_SOURCES = \
 	applications/advection/2d/swirl_mapped/swirl_user.cpp \
 	applications/advection/2d/swirl_mapped/swirl.cpp \
