(mountain) Add header to makefile

--- a/applications/Mountain/Makefile.am
+++ b/applications/Mountain/Makefile.am
@@ -5,6 +5,8 @@
 
 bin_PROGRAMS += applications/Mountain/mountain
 
+include_HEADERS += applications/Mountain/mountain/mountain_user.h
+
 applications_Mountain_mountain_SOURCES = \
 	applications/Mountain/mountain_user.cpp \
 	applications/Mountain/mountain.cpp \
